--- a/data/html/vue_base.html
+++ b/data/html/vue_base.html
@@ -1,1 +1,1 @@
-<script type="text/javascript" src="{% static 'src/vue/dist/js/chunk-vendors.js' %}"></script><script type="text/javascript" src="{% static 'src/vue/dist/js/app.js' %}"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
